# search_suggestions_service

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  local.env  main.py  pyproject.toml  requirements.txt
src/: dependecies.py  routes.py  schemas.py  settings.py
src/repositories/: persons.py
src/services/: search_suggestions.py
tests/: conftest.py  test_api.py  testdata.py
