[tool.poetry]
name = "search_suggestions_service"
version = "0.1.0"
description = ""
authors = ["Anastasia Chumakova <pospelowa.anast@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
pydantic-settings = "^2.0.3"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
aiohttp = "^3.8.5"
black = "^23.7.0"
isort = "^5.12.0"
redis = "^5.0.0"
loguru = "^0.7.0"
prometheus-fastapi-instrumentator = "^6.1.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
aioresponses = "^0.7.4"
orjson = "^3.9.5"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
